--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <htmL>
-  <head>
-    Head tag. This tag is our Data tag. Kinda important. 
+    <head>
+    Head tag. This tag is our Data tag. I'm sure it's important, don't know why yet. 
     
     </br></br> LINK tag: < link href="<b>enter here, in this case, it's style.css</b>"/>
     
-    <link href="style.css"/>
+    <link rel="stylesheet" href="style.css"/>
   
   <body></br></br>
 
